--- a/src/EGram.Data.EF/EGram.Data.EF.csproj
+++ b/src/EGram.Data.EF/EGram.Data.EF.csproj
@@ -7,10 +7,8 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Contexts\" />
-    <Folder Include="Models\House\" />
-    <Folder Include="Models\Member\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="EntityFramework" Version="6.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
   </ItemGroup>
 </Project>
