--- a/src/EGram.Data.EF/EGram.Data.EF.csproj
+++ b/src/EGram.Data.EF/EGram.Data.EF.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Contexts\" />
+    <Folder Include="EntityConfiguration\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
