--- a/src/EGram.Data.EF/EGram.Data.EF.csproj
+++ b/src/EGram.Data.EF/EGram.Data.EF.csproj
@@ -8,6 +8,7 @@
     <Folder Include="Models\" />
     <Folder Include="Contexts\" />
     <Folder Include="EntityConfiguration\" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
