* EGram.Data.EF.csproj: - UnitOfWork Pattern added.
* Startup.cs:
* EGram.Web.MVC.csproj:
* UnitOfWork.cs:
* IUnitOfWork.cs:
* Dashboard.cs:
* BaseRepository.cs:
* IBaseRepository.cs:
* SurveyRepository.cs:
* ISurveyRepository.cs:
* SurveyRepository.cs:
* ISurveyRepository.cs:

--- a/src/EGram.Data.EF/EGram.Data.EF.csproj
+++ b/src/EGram.Data.EF/EGram.Data.EF.csproj
@@ -9,6 +9,8 @@
     <Folder Include="Contexts\" />
     <Folder Include="EntityConfiguration\" />
     <Folder Include="Repositories\" />
+    <Folder Include="Repositories\BaseRepositories\" />
+    <Folder Include="Repositories\SurveyRepositories\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
