--- a/src/EGram.Web.MVC/EGram.Web.MVC.csproj
+++ b/src/EGram.Web.MVC/EGram.Web.MVC.csproj
@@ -8,4 +8,10 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EGram.Data.EF\EGram.Data.EF.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\Administrators\" />
+  </ItemGroup>
 </Project>
