--- a/src/EGram.Data.SQL.Ef/EGram.Data.SQL.Ef.csproj
+++ b/src/EGram.Data.SQL.Ef/EGram.Data.SQL.Ef.csproj
@@ -15,6 +15,7 @@
     <Folder Include="Migrations\" />
     <Folder Include="Seeds\" />
     <Folder Include="Extensions\" />
+    <Folder Include="Repositories\EducationRepositories\" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="Views\Home\Contact.cshtml" />
