--- a/src/EGram.Data.SQL.Ef/Properties/launchSettings.json
+++ b/src/EGram.Data.SQL.Ef/Properties/launchSettings.json
@@ -17,8 +17,8 @@
     },
     "EGram.Data.SQL.Ef": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchBrowser": false,
+      "applicationUrl": "https://localhost:6001;http://localhost:6002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
