--- a/src/EGram.Web.MVC/EGram.Web.MVC.csproj
+++ b/src/EGram.Web.MVC/EGram.Web.MVC.csproj
@@ -5,12 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="bootstrap" Version="4.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.2" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\Administrators\" />
     <Folder Include="Views\" />
+    <Folder Include="Views\Home\" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="appsettings.Production.json" />
