* ApplicationDataContext.cs: - Added ASPNetCore.Identity - Added Migration.
* Startup.cs:
* Startup.cs:
* User.cs:
* EGramContext.cs:
* EGram.Data.SQL.Ef.csproj:
* HomeController.cs:
* ApplicationRole.cs:
* ApplicationUser.cs:
* 20180724185224_Identity.cs:
* 20180724185224_Identity.Designer.cs:

--- a/src/EGram.Data.SQL.Ef/EGram.Data.SQL.Ef.csproj
+++ b/src/EGram.Data.SQL.Ef/EGram.Data.SQL.Ef.csproj
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.1.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,6 +19,9 @@
     <Folder Include="Seeds\" />
     <Folder Include="Extensions\" />
     <Folder Include="Repositories\EducationRepositories\" />
+    <Folder Include="Identity\" />
+    <Folder Include="Identity\Models\" />
+    <Folder Include="Identity\" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="Views\Home\Contact.cshtml" />
