--- a/src/EGram.Web.MVC/EGram.Web.MVC.csproj
+++ b/src/EGram.Web.MVC/EGram.Web.MVC.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="bootstrap" Version="4.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="2.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +19,7 @@
     <Folder Include="Areas\Identity\" />
     <Folder Include="Areas\Identity\Pages\" />
     <Folder Include="Pages\" />
+    <Folder Include="Views\Dashboard\" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="appsettings.Production.json" />
